[gd_scene load_steps=3 format=3 uid="uid://dn4up26o6iiqg"]

[ext_resource type="Script" path="res://Levels/konst/ZombieKillingMachine/note/note.gd" id="1_130ru"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dp2be"]
size = Vector2(6, 4)

[node name="Note" type="Node2D"]
script = ExtResource("1_130ru")

[node name="StaticBody2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_dp2be")

[node name="Color2" type="ColorRect" parent="StaticBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -4.0
offset_right = 9.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Color" type="ColorRect" parent="StaticBody2D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -3.0
offset_right = 8.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="area_shape_entered" from="StaticBody2D" to="." method="_on_touched"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
